# FRC

./: NOTES.md  README.md
Romi/: README.md  arch-install.sh  setup-custom-vision.sh  setup-photon-vision.sh  setup.sh
RomiReference/: simgui-ds.json
Vision/: .gitignore  .python-version  README.md  main.py  pyproject.toml  run.sh
Vision/network_tables/: __init__.py  network_tables.py
Vision/util/: __init__.py  hsv_util.py
Vision/vision/: __init__.py  vision.py
Vision/web/: __init__.py  web_server.py
